force-app/main/default/objects/Visit__c/fields/Call_Report_Score__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Score__c</fullName>
    <description>Call report engagement score. Brand Reminder dispense lines (+2 each) and CLM session duration bands (+1 per 60s, max +5).</description>
    <label>Call Report Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>