force-app/main/default/objects/Visit__c/fields/Client_Visit_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Visit_Key__c</fullName>
    <externalId>true</externalId>
    <label>Client Visit Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>