force-app/main/default/objects/Visit__c/fields/CLM_Presentation__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation__c</fullName>
    <label>CLM Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLM1</fullName>
                <default>true</default>
                <label>CLM1</label>
            </value>
            <value>
                <fullName>CLM2</fullName>
            </value>
            <value>
                <fullName>CLM3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>