force-app/main/default/objects/Visit__c/fields/Coaching_Event__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching Event</label>
    <referenceTo>Coaching_Event__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>