force-app/main/default/objects/Visit__c/fields/Is_Double_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Double_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Visit</label>
    <type>Checkbox</type>
</CustomField>