force-app/main/default/objects/Visit__c/fields/Pharma_Project__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharma Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Project_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>