force-app/main/default/objects/Visit__c/fields/Plan_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rejection_Reason__c</fullName>
    <label>Plan Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>