force-app/main/default/objects/Visit__c/fields/Products_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Products_Discussed__c</fullName>
    <label>Products Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>