force-app/main/default/objects/Visit__c/fields/Schema_Probe2__c.field-meta.xml
<CustomField>
    <fullName>Schema_Probe2__c</fullName>
    <label>Schema Probe2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>