force-app/main/default/objects/Visit__c/fields/Validated_At__c.field-meta.xml
<CustomField>
    <fullName>Validated_At__c</fullName>
    <label>Validated At</label>
    <type>DateTime</type>
</CustomField>