force-app/main/default/objects/Visit__c/fields/Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Validated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Validated_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>