force-app/main/default/objects/Visit__c/fields/Validation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Validation_Due_Date__c</fullName>
    <label>Validation Due Date</label>
    <type>Date</type>
</CustomField>