force-app/main/default/objects/Visit__c/fields/Visit_Objective__c.field-meta.xml
<CustomField>
    <fullName>Visit_Objective__c</fullName>
    <label>Visit Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>