force-app/main/default/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned (Automatically)</fullName>
                <default>true</default>
                <label>Planned (Automatically)</label>
            </value>
            <value>
                <fullName>Planned (Manager)</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>