force-app/main/default/objects/Visit__c/fields/Zeta_Probe_V1__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Probe_V1__c</fullName>
    <label>Zeta Probe V1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>