force-app/main/default/objects/Visit__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <description>Require cancellation reason when visit is cancelled.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Cancelled&quot;),
  ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Enter a cancellation reason when cancelling a visit.</errorMessage>
</ValidationRule>