force-app/main/default/objects/Visit__c/validationRules/No_Future_Completed_Visits.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Completed_Visits</fullName>
    <active>true</active>
    <description>Prevents marking visits as Completed before their scheduled calendar date.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Completed&quot;),
  DATEVALUE(Start_Date__c) &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A visit cannot be marked Completed before its scheduled date.</errorMessage>
</ValidationRule>