force-app/main/default/objects/Visit__c/validationRules/Planned_Complete_Requires_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Complete_Requires_Scheduled</fullName>
    <active>true</active>
    <description>Planned visits can only be marked Completed from Scheduled status.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;Completed&quot;),
  NOT(ISPICKVAL(Visit_Type__c, &quot;Unplanned&quot;)),
  NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Scheduled&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Planned visits must be Scheduled before they can be Completed.</errorMessage>
</ValidationRule>