force-app/main/default/objects/Visit__c/validationRules/Unplanned_Initial_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Unplanned_Initial_Status</fullName>
    <active>true</active>
    <description>New unplanned visits must start as Scheduled.</description>
    <errorConditionFormula>AND(
  ISNEW(),
  ISPICKVAL(Visit_Type__c, &quot;Unplanned&quot;),
  NOT(ISPICKVAL(Status__c, &quot;Scheduled&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Unplanned visits must be created with Scheduled status.</errorMessage>
</ValidationRule>